<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sobre.RedesSociaisFragment">

    <ImageView
        android:id="@+id/facebookImageView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/facebook"
        android:src="@drawable/facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/instagramImageView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/instagram"
        android:src="@drawable/instagram"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebookImageView" />

    <ImageView
        android:id="@+id/twitterImageView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/twitter"
        android:src="@drawable/twitter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instagramImageView"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/downloadImageView"
        android:layout_width="215dp"
        android:layout_height="67dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/download_app"
        android:src="@drawable/downloadapp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twitterImageView" />
</androidx.constraintlayout.widget.ConstraintLayout>