<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cadastro_clientes_confirmaco.CadastroClientesConfirmacaoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:paddingVertical="@dimen/activity_vertical_margin">

            <!--            matricula-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cadastro_clientes_confirmacao_matricula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_matricula"
                app:layout_constraintBottom_toTopOf="@id/cadastro_clientes_confirmacao_nome"
                app:layout_constraintTop_toTopOf="parent"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:enabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--            nome-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cadastro_clientes_confirmacao_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_nome"
                app:layout_constraintBottom_toTopOf="@id/cadastro_clientes_confirmacao_sobrenome"
                app:layout_constraintTop_toBottomOf="@id/cadastro_clientes_confirmacao_matricula"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:enabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--            sobrenome-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cadastro_clientes_confirmacao_sobrenome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_sobrenome"
                app:layout_constraintBottom_toTopOf="@id/cadastro_clientes_confirmacao_sexo"
                app:layout_constraintTop_toBottomOf="@id/cadastro_clientes_confirmacao_nome"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:enabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--            sexo: o Masculino; o Feminino-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cadastro_clientes_confirmacao_sexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_sexo"
                app:layout_constraintBottom_toTopOf="@id/cadastro_clientes_confirmacao_curso"
                app:layout_constraintTop_toBottomOf="@id/cadastro_clientes_confirmacao_sobrenome"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:enabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--            Curso de Graduacao em Engenharia: [] Computação; [] Civil; [] Produção; [] Mecânica-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cadastro_clientes_confirmacao_curso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_curso"
                app:layout_constraintBottom_toTopOf="@id/cadastro_clientes_confirmacao_celular"
                app:layout_constraintTop_toBottomOf="@id/cadastro_clientes_confirmacao_sexo"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:enabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--            número do celular-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cadastro_clientes_confirmacao_celular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_celular"
                app:layout_constraintBottom_toTopOf="@id/cadastro_clientes_confirmacao_email"
                app:layout_constraintTop_toBottomOf="@id/cadastro_clientes_confirmacao_curso"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:prefixText="+55"
                android:enabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--            e-mail-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cadastro_clientes_confirmacao_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_email"
                app:layout_constraintBottom_toTopOf="@id/cadastro_clientes_confirmacao_cartao_bandeira"
                app:layout_constraintTop_toBottomOf="@id/cadastro_clientes_confirmacao_celular"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:enabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--            bandeira do cartão: o Elo; o Visa; o Mastercard-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cadastro_clientes_confirmacao_cartao_bandeira"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_cartao_bandeira"
                app:layout_constraintBottom_toTopOf="@id/cadastro_clientes_confirmacao_cartao_numero"
                app:layout_constraintTop_toBottomOf="@id/cadastro_clientes_confirmacao_email"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:enabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--            número do cartão-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cadastro_clientes_confirmacao_cartao_numero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_cartao_numero"
                app:layout_constraintBottom_toTopOf="@id/cadastro_clientes_confirmacao_cartao_titular"
                app:layout_constraintTop_toBottomOf="@id/cadastro_clientes_confirmacao_cartao_bandeira"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:enabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--            nome do titular-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cadastro_clientes_confirmacao_cartao_titular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_cartao_titular"
                app:layout_constraintBottom_toTopOf="@id/cadastro_clientes_confirmacao_cartao_validade"
                app:layout_constraintTop_toBottomOf="@id/cadastro_clientes_confirmacao_cartao_numero"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:enabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--            data de validade-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cadastro_clientes_confirmacao_cartao_validade"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintBottom_toTopOf="@id/cadastro_clientes_confirmacao_cartao_cv"
                app:layout_constraintTop_toBottomOf="@id/cadastro_clientes_confirmacao_cartao_titular"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_cartao_validade"
                android:enabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--            codigo de verificacao-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cadastro_clientes_confirmacao_cartao_cv"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/cadastro_clientes_confirmacao_btns"
                app:layout_constraintTop_toBottomOf="@id/cadastro_clientes_confirmacao_cartao_validade"
                android:hint="@string/label_cartao_cv"
                android:enabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/cadastro_clientes_confirmacao_btns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/cadastro_clientes_confirmacao_cartao_cv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cadastro_clientes_confirmacao_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:text="@string/label_cancel"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cadastro_clientes_confirmacao_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="4dp"
                android:text="@string/label_confirm"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>